--- a/package.json
+++ b/package.json
@@ -6,19 +6,47 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint:prettier": "prettier --write \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:staged": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@rollup/plugin-eslint": "^9.0.4",
     "@types/node": "^20.6.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "axios": "^1.5.0",
+    "cross-env": "^7.0.3",
+    "element-plus": "^2.3.14",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "husky": "^8.0.3",
+    "less": "^4.2.0",
+    "lint-staged": "^14.0.1",
     "pinia": "^2.1.6",
+    "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
+    "vue-router": "4",
     "vue-tsc": "^1.8.5",
     "web-localstorage-plus": "^0.0.19"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue,ts,tsx}": [
+        "pnpm run lint:eslint",
+        "pnpm run lint:prettier"
+    ]
   }
 }
