--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@rollup/plugin-eslint": "^9.0.4",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
@@ -39,14 +38,15 @@
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-router": "4",
     "vue-tsc": "^1.8.5",
     "web-localstorage-plus": "^0.0.19"
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
-        "pnpm run lint:eslint",
-        "pnpm run lint:prettier"
+      "pnpm run lint:eslint",
+      "pnpm run lint:prettier"
     ]
   }
 }
