--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "lint:eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:prettier": "prettier --write \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:staged": "lint-staged",
+    "lint:stylelint": "stylelint --fix \"**/*.{vue,css,scss,less}\"",
+    "stylelint": "stylelint \"**/*.{css,scss,less}\"",
     "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "axios": "^1.5.0",
+    "element-plus": "^2.3.14",
+    "normalize.css": "^8.0.1",
+    "pinia": "^2.1.6",
+    "pinia-plugin-persist": "^1.0.0",
+    "terser": "^5.20.0",
+    "vue": "^3.3.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
@@ -22,9 +31,8 @@
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-vue": "^4.2.3",
-    "axios": "^1.5.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "cross-env": "^7.0.3",
-    "element-plus": "^2.3.14",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -32,16 +40,15 @@
     "husky": "^8.0.3",
     "less": "^4.2.0",
     "lint-staged": "^14.0.1",
-    "pinia": "^2.1.6",
     "prettier": "^3.0.3",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1",
-    "vue-router": "4",
-    "vue-tsc": "^1.8.5",
-    "web-localstorage-plus": "^0.0.19"
+    "vue-tsc": "^1.8.5"
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
