--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^8.0.3",
     "less": "^4.2.0",
     "lint-staged": "^14.0.1",
+    "postcss-preset-env": "^9.1.4",
     "prettier": "^3.0.3",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
@@ -48,6 +49,7 @@
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^1.8.5"
   },
   "lint-staged": {
