--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "consola": "^3.2.3",
     "element-plus": "^2.3.14",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
